# flightAI-simulator

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
configs/: training_config.yaml
include/: agent.h  environment.h  grpc_client.h  grpc_server.h  metrics.h  models.h  ppo.h  utils.h
monitoring/: dashboard.json  datasources.yaml  prometheus.yml
proto/: airsim_bridge.proto
src/: agent.cpp  environment.cpp  grpc_client.cpp  grpc_server.cpp  main.cpp  metrics.cpp  models.cpp  ppo.cpp  utils.cpp
tests/: CMakeLists.txt  test_advantage.cpp  test_grpc.cpp  test_ppo.cpp
